# CGL

./: CMakeLists.txt  CodeDocs.md  Dependencies.md  Docs.md  README.md  TODO.md
docs/: include.md  input.md  shapes.md  text.md  window.md
include/: cgl.hpp  cgl_audio.hpp  cgl_camera.hpp  cgl_color.hpp  cgl_draw.hpp  cgl_image.hpp  cgl_input.hpp  cgl_layer.hpp  cgl_physics.hpp  cgl_position.hpp  cgl_random.hpp  cgl_scene.hpp  cgl_shape.hpp  cgl_text.hpp  cgl_vector.hpp  cgl_window.hpp
installer/: CGL-installer.iss
src/: audio.cpp  camera.cpp  color.cpp  draw.cpp  image.cpp  input.cpp  layer.cpp  main.cpp  physics.cpp  position.cpp  random.cpp  shape.cpp  text.cpp  window.cpp
vcpkg/ports/cgl/: portfile.cmake
